# organizational-authenticity-analysis

./: .gitignore  README.md  manuscript.tex  pyproject.toml
docs/: assessment_analysis.md
part1_stated_values/: README.md
part1_stated_values/config/: companies.csv  page_candidates.csv
part1_stated_values/data/processed/: acquisition_status.csv  annual_snapshot_candidates.csv  cdx_query_log.csv  historical_page_candidates.csv  historical_url_discovery_audit.csv  target_company_years.csv  text_artifacts.csv
part1_stated_values/data/review/: manual_review_queue.csv  review_decisions.csv
part1_stated_values/docs/: change_validation.md  codebook.md  extraction_validation.md  llm_analysis.md  manual_review_protocol.md  methodology.md  pilot_approval.md  pilot_decision_record.md  summary.md  taxonomy.md  validation_report.md
part1_stated_values/outputs/: change_events.csv  coverage_report.json  part1_company_year.csv  phase_validation.json  requirement_audit.json  theme_observations.csv
part1_stated_values/outputs/llm_analysis/: llm_analysis_summary.json  llm_change_analysis.csv  llm_snapshot_analysis.csv
part1_stated_values/prompts/: README.md
part1_stated_values/src/org_auth_part1/: __init__.py  acquire.py  analyze.py  cdx.py  compare.py  discover.py  extract.py  llm_analysis.py  phase_validation.py  pipeline.py  registry.py  report.py  run.py  select.py  status.py  targets.py  validate.py
part1_stated_values/tests/: test_acquire.py  test_analyze.py  test_cdx.py  test_compare.py  test_discover.py  test_extract.py  test_llm_analysis.py  test_phase_validation.py  test_pipeline.py  test_registry.py  test_report.py  test_run.py  test_select.py  test_status.py  test_targets.py  test_validate.py
part2_lived_values/: README.md
part2_lived_values/config/: company_year_targets.csv
part2_lived_values/data/processed/: download_log.csv  extraction_log.csv  filing_candidates.csv
part2_lived_values/data/review/: manual_review_queue.csv
part2_lived_values/docs/: audit_notes.md  codebook.md  enhanced_text_mining_analysis.md  methodology.md  plan.md  summary.md  text_mining_analysis.md  top_shift_excerpt_audit.md
part2_lived_values/outputs/: coverage_report.json  requirement_audit.json
part2_lived_values/outputs/text_mining/: company_theme_trends.csv  (+9 more)
part2_lived_values/tests/: test_analyze.py  test_edgar.py  test_enhanced_text_mining.py  test_extract.py  test_figures.py  test_status_validate.py  test_targets.py  test_text_mining.py
part3_authenticity/: README.md
part3_authenticity/docs/: case_audit_notes.md  codebook.md  methodology.md  results_snapshot.md  summary.md
part3_authenticity/outputs/: company_summary.csv  distribution_summary.csv  part3_authenticity_index.csv  requirement_audit.json  sector_summary.csv  semantic_similarity.csv  sensitivity_summary.csv  validity_case_audit.csv  year_summary.csv
part3_authenticity/tests/: test_index.py  test_semantic.py  test_validate.py
part4_proposal/: README.md
part4_proposal/docs/: codebook.md  methodology.md  summary.md
part4_proposal/outputs/: case_audit_targets.csv  genre_pressure_correlations.csv  genre_pressure_regression.csv  genre_pressure_summary.csv  part4_genre_diagnostics.csv  quadrant_genre_summary.csv  requirement_audit.json  section_summary.csv  theme_level_semantic_similarity.csv  theme_level_semantic_summary.csv
part4_proposal/tests/: test_analysis.py  test_sections.py  test_theme_semantic.py
src/org_auth_part1/: cdx.py  compare.py  discover.py  extract.py  models.py  phase_validation.py  pipeline.py  report.py  validate.py
(+66 files in other folders)
