[project]
name = "organizational-authenticity-analysis"
version = "0.1.0"
description = "Research pipeline for organizational authenticity and corporate value alignment."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[project.scripts]
part1-build-targets = "org_auth_part1.targets:main"
part1-query-cdx = "org_auth_part1.cdx:main"
part1-validate-registry = "org_auth_part1.registry:main"
part1-discover = "org_auth_part1.discover:main"
part1-select = "org_auth_part1.acquire:main"
part1-process = "org_auth_part1.pipeline:main"
part1-validate = "org_auth_part1.validate:main"
part1-validate-phases = "org_auth_part1.phase_validation:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["part1_stated_values/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
