[project]
name = "organizational-authenticity-analysis"
version = "0.1.0"
description = "Research pipeline for organizational authenticity and corporate value alignment."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "en-core-web-sm",
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "pydantic>=2.12.5",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.5.1",
    "spacy>=3.8.14",
    "transformers>=5.10.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[project.scripts]
part1-run = "org_auth_part1.run:main"
part1-run-status = "org_auth_part1.status:main"
part1-discover = "org_auth_part1.discover:main"
part1-select = "org_auth_part1.acquire:main"
part1-process = "org_auth_part1.pipeline:main"
part1-validate-phases = "org_auth_part1.phase_validation:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "part1_stated_values/src"}

[tool.setuptools.packages.find]
where = ["part1_stated_values/src"]

[tool.pytest.ini_options]
testpaths = ["part1_stated_values/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
